# adaptive_spin_evolution

./: .gitignore  .gitmodules  CMakeLists.txt  InitialResults.nb  README.md  TODO.md  configuration.hpp  environment.yml  generate_energies.py  hamiltonian.hpp  hamiltonian.hpp.bak  input_tools.cpp  input_tools.hpp  job_launcher.nb  main.cpp  makefile  mode_and_couplings  parameters.conf  pyproject.toml  requirements.txt  setup.py  spin_density_matrix.hpp  unit_tests.cpp
code_out/: run_0_0_0  run_0_0_1  run_0_0_2  run_0_0_3  run_0_0_4  run_0_0_5  run_0_0_6  run_0_0_7  run_1_0_0  run_1_0_1  run_1_0_2  run_1_0_6  run_1_0_7  run_2_0_0  run_2_0_1  run_2_0_2  run_2_0_3  run_2_0_4  run_2_0_5  run_2_0_6  run_2_0_7
docs/: DesigningSimulationAlgebra.md  class_configuration.md
docs/images/: propagate_1.aseprite
hamiltonian/: append_connections.cpp  core.cpp  evolve_space.cpp  grow_configuration_space.cpp  hamiltonian.hpp  merge_states.cpp  output.cpp  par_runtime.cpp  runtime.cpp  setup.cpp
io_tools/: input_tools.cpp  input_tools.hpp  output_tools.cpp  output_tools.hpp  program_options_tools.cpp~  program_options_tools.hpp~
job_manager/: py_main.py
job_manager/adaptive_io/: generate_config.py  make_plot.py  mode_generator.py
old/: just_compare.py
pyket/: compare.py  just_compare.py  lineshapes.py  one_compare.py  parse_input.py  photon_baths.py  plot_2_modes.py  plot_compare.py  py_main.py  pyket.cpp  recursion_tests.py
pyket/pytools/: generate_config.py  make_hamiltonian.py
scripts/: example_benzen_in_cavity.ipynb
src/: CMakeLists.txt  CMakeLists.txt~  main.cpp  main.cpp~  main2.cpp  main_hamiltonian.cpp  main_params.cpp  main_state_ket.cpp  main_state_vector.cpp  pyket_config.hpp  pyket_config.hpp.in  state_vector.cpp
src/hamiltonian/: CMakeLists.txt  CMakeLists.txt~  append_connections.cpp  configuration.cpp  configuration.hpp  core.cpp  core.cpp~  evolve_space.cpp  evolve_space.cpp~  grow_configuration_space.cpp~  hamiltonian.hpp  hamiltonian.hpp~  input_tools.hpp  merge_states.cpp  merge_states.cpp~  odeint_evolve.cpp  output.cpp  output.cpp~  output_tools.cpp  output_tools.hpp  par_runtime.cpp  par_runtime.cpp.old  py_generate_config_class.py  py_str_gen.py  py_str_gen.py~  runtime.cpp  runtime.cpp~  setup.cpp  setup.cpp~
src/hamiltonian/io_tools/: #input_tools.cpp#  #output_tools.hpp#  .#output_tools.hpp  CMakeLists.txt  CMakeLists.txt~  input_tools.cpp  input_tools.hpp  output_tools.cpp  program_options_tools.cpp  program_options_tools.hpp
test/: fake_input.txt  test_lineshape.py  test_parse_input.py
travis/: build_wheels.sh
unit_tests/: main_test.cpp  makefile
